Do not display context menu when pending event flag is false.

When an event filter is installed on the view, the right
mouse click event may trigger Chromium to request a context
menu even though the context menu events get filtered out.

Removes a Q_ASSERT that would now never be triggered.

Change-Id: I3ff496ec4e4ecbb4faa107f7e221765918c5fa06
Task-number: QTBUG-49092
Reviewed-by: Joerg Bornemann <joerg.bornemann@theqtcompany.com>